test/haskell2010/conformance/negative/type-error.hs
module Main where

main = 1 + True
